kubernetes/02-apps/jellyfin/ingress.yaml
# kubernetes/02-apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: homelab
  labels:
    app.kubernetes.io/name: jellyfin
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # Opcional: para forzar HTTPS
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
    # Para Jellyfin, a veces es necesario permitir websockets
    traefik.ingress.kubernetes.io/customrequestheaders: X-Forwarded-Proto":"https" # Si usas HTTPS y tienes problemas
spec:
  rules:
    - host: jellyfin.homelab.local # El nombre de host que usarás
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin # Nombre del Service
                port:
                  name: http # Puerto HTTP (8096) del Service
